refactor:멤버_여행소식_리팩토링